--- a/MemeMe-v1.0/MemeMe-v1.0/Base.lproj/Main.storyboard
+++ b/MemeMe-v1.0/MemeMe-v1.0/Base.lproj/Main.storyboard
@@ -27,7 +27,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="C7r-UC-bhr"/>
-                                    <barButtonItem title="Camera" id="ndK-Bs-7Q8"/>
+                                    <barButtonItem title="Camera" id="ndK-Bs-7Q8">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="IKH-SR-GYK"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WCT-Kh-eHG">
