--- a/MemeMe-v1.0/MemeMe-v1.0/Base.lproj/Main.storyboard
+++ b/MemeMe-v1.0/MemeMe-v1.0/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H3G-CQ-mLK">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H3G-CQ-mLK">
                                 <rect key="frame" x="0.0" y="72" width="600" height="484"/>
                                 <animations/>
                             </imageView>
