--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1960784314" green="0.96862745100000003" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="QVf-xd-Dlx" kind="relationship" relationship="viewControllers" id="m4B-Ql-2qe"/>
@@ -112,14 +112,15 @@
             </objects>
             <point key="canvasLocation" x="448" y="229"/>
         </scene>
-        <!--Sent Memes View Controller-->
+        <!--Sent Memes Collection View Controller-->
         <scene sceneID="PFg-0v-4h8">
             <objects>
-                <collectionViewController id="guM-9d-vx5" customClass="SentMemesViewController" sceneMemberID="viewController">
+                <collectionViewController id="guM-9d-vx5" customClass="SentMemesCollectionViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="WeJ-mb-8iT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
+                        <color key="backgroundColor" red="0.1960784314" green="0.96862745100000003" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="z0g-Uf-qdu">
                             <size key="itemSize" width="125" height="132"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -127,26 +128,19 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lVj-4o-VKL" customClass="SentMemeCollectionViewCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemeCollectionViewCell" id="lVj-4o-VKL" customClass="MemeCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="125" height="132"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="125" height="132"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Edm-qY-Gb3">
-                                            <rect key="frame" x="41" y="111" width="42" height="21"/>
-                                            <animations/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2cI-d2-6Fg">
-                                            <rect key="frame" x="-8" y="19" width="141" height="88"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1dT-FO-bXw">
+                                            <rect key="frame" x="-42" y="25" width="240" height="128"/>
                                             <animations/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60M-f5-cZb">
-                                            <rect key="frame" x="41" y="0.0" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hsk-xN-R8e">
+                                            <rect key="frame" x="41" y="34" width="42" height="21"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -157,18 +151,9 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <animations/>
-                                <constraints>
-                                    <constraint firstItem="Edm-qY-Gb3" firstAttribute="leading" secondItem="lVj-4o-VKL" secondAttribute="leadingMargin" constant="33" id="1BC-lY-umE"/>
-                                    <constraint firstItem="60M-f5-cZb" firstAttribute="leading" secondItem="lVj-4o-VKL" secondAttribute="leadingMargin" constant="33" id="Co3-iE-ZK1"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="Edm-qY-Gb3" secondAttribute="trailing" constant="34" id="Sdz-Ny-uao"/>
-                                    <constraint firstItem="60M-f5-cZb" firstAttribute="centerX" secondItem="lVj-4o-VKL" secondAttribute="centerX" id="Zsx-S4-87m"/>
-                                    <constraint firstItem="Edm-qY-Gb3" firstAttribute="centerX" secondItem="lVj-4o-VKL" secondAttribute="centerX" id="mbj-Ja-Au2"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="60M-f5-cZb" secondAttribute="trailing" constant="34" id="uYe-wQ-SEc"/>
-                                </constraints>
                                 <connections>
-                                    <outlet property="bottomText" destination="Edm-qY-Gb3" id="0QO-83-5if"/>
-                                    <outlet property="image" destination="2cI-d2-6Fg" id="vX9-Hn-2nC"/>
-                                    <outlet property="topText" destination="60M-f5-cZb" id="4GG-kc-Src"/>
+                                    <outlet property="cellLabel" destination="hsk-xN-R8e" id="SAP-H6-jjH"/>
+                                    <outlet property="memeImageView" destination="1dT-FO-bXw" id="Bz5-2S-aOa"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -178,6 +163,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="xpn-65-wNZ"/>
+                    <connections>
+                        <outlet property="flowLayout" destination="z0g-Uf-qdu" id="k0Z-rW-Fvp"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mX-ob-veW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
