--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bho-w5-iZb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bho-w5-iZb">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,7 +17,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="QVf-xd-Dlx" kind="relationship" relationship="viewControllers" id="m4B-Ql-2qe"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="yVQ-K9-tMC"/>
+                        <segue destination="PW6-Ie-VqU" kind="relationship" relationship="viewControllers" id="WIH-Ap-U8x"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cUe-L4-b1D" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -110,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448" y="229"/>
+            <point key="canvasLocation" x="1192" y="1237"/>
         </scene>
         <!--Sent Memes Collection View Controller-->
         <scene sceneID="PFg-0v-4h8">
@@ -143,7 +143,7 @@
                                             <rect key="frame" x="41" y="34" width="42" height="21"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -162,14 +162,58 @@
                             <outlet property="delegate" destination="guM-9d-vx5" id="D6B-cn-PKZ"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="xpn-65-wNZ"/>
+                    <navigationItem key="navigationItem" id="xpn-65-wNZ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="K9h-51-zuj">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="lBx-E7-uaX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="flowLayout" destination="z0g-Uf-qdu" id="k0Z-rW-Fvp"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0mX-ob-veW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="446" y="900"/>
+            <point key="canvasLocation" x="448" y="898"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="Ykp-94-zsH">
+            <objects>
+                <tableViewController id="Kqs-Gk-Nca" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q4J-MZ-DAm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="FRf-gB-Edf">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FRf-gB-Edf" id="kA4-jJ-U3f">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </tableViewCellContentView>
+                                <animations/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Kqs-Gk-Nca" id="4aV-Tx-dZt"/>
+                            <outlet property="delegate" destination="Kqs-Gk-Nca" id="0bX-D7-mtk"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ejP-ZD-xIq">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ifk-uC-XoJ">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="HJs-U6-Oau"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="koP-p7-kgB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="454" y="1564"/>
         </scene>
         <!--Item-->
         <scene sceneID="glW-Be-h1C">
@@ -189,5 +233,28 @@
             </objects>
             <point key="canvasLocation" x="-482" y="609"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="VQ9-I1-ge4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PW6-Ie-VqU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="2u1-DA-Dqm"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2oO-hM-ID3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Kqs-Gk-Nca" kind="relationship" relationship="rootViewController" id="XSI-6P-YJ1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iOo-iZ-Lny" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-482" y="1320"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="HJs-U6-Oau"/>
+    </inferredMetricsTieBreakers>
 </document>
