--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -99,14 +99,21 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="mnn-f2-P8O"/>
-                    <navigationItem key="navigationItem" id="Gxu-BU-G6P"/>
+                    <navigationItem key="navigationItem" id="Gxu-BU-G6P">
+                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="VxY-x3-vTv">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="Rsz-WE-nZc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="bottomText" destination="AMT-u6-dvG" id="ZQr-MY-bft"/>
                         <outlet property="camButton" destination="ndK-Bs-7Q8" id="mxl-zY-Ld8"/>
                         <outlet property="imagePickerView" destination="H3G-CQ-mLK" id="V5b-Rv-KuJ"/>
                         <outlet property="shareButton" destination="dbe-WM-fv7" id="SjF-AN-G0k"/>
                         <outlet property="topText" destination="xQO-Gd-8qa" id="bnU-LL-18j"/>
-                        <segue destination="TJu-OU-6MZ" kind="unwind" unwindAction="unwindMemeEditor:" id="Lqq-7I-LL2"/>
+                        <segue destination="TJu-OU-6MZ" kind="unwind" identifier="unwindMemeEditor" unwindAction="unwindMemeEditor:" id="fqh-xw-wx9"/>
+                        <segue destination="TJu-OU-6MZ" kind="unwind" identifier="unwindMemeEditorToCollectionView" unwindAction="unwindMemeEditorToCollection:" id="eeB-MM-7qc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -202,7 +209,7 @@
                     <navigationItem key="navigationItem" id="xpn-65-wNZ">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="K9h-51-zuj">
                             <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="lBx-E7-uaX"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="fromCollectionView" id="lBx-E7-uaX"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -261,7 +268,7 @@
                     <navigationItem key="navigationItem" id="ejP-ZD-xIq">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ifk-uC-XoJ">
                             <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="HJs-U6-Oau"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="fromTableView" id="HJs-U6-Oau"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
